--- a/src/app/mission/mission-list/mission-list.component.html
+++ b/src/app/mission/mission-list/mission-list.component.html
@@ -1,5 +1,5 @@
 
-  <app-inner-nav title="Liste over oppdrag" [buttons]="innerNavButtons">
+  <app-inner-nav [title]="innerNavTitle" [buttons]="innerNavButtons">
     <app-mission-list-view [missions]="missions$ | async"></app-mission-list-view>
   </app-inner-nav>
 
