--- a/src/app/shared/components/mission-list-view/mission-list-view.component.html
+++ b/src/app/shared/components/mission-list-view/mission-list-view.component.html
@@ -1,5 +1,5 @@
 
-<div class="p-0">
+<div class="p-0 m-1">
 
     <p *ngIf="missions == undefined || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
 
