--- a/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/timesheet/components/timesheet-card/timesheet-card.component.html
@@ -20,10 +20,10 @@
 
     </span>
 
-    <span *ngIf="timesheet.status === 0" class="color-warn text-center" fxLayout="column" fxLayoutAlign="space-between center">
-      <span>
+    <span *ngIf="timesheet.status === 0" class="color-warn" fxLayout="column" fxLayoutAlign="space-between center">
+      <span fxLayout="column" fxLayoutAlign="start center">
         <mat-icon>lock_open</mat-icon>
-        <span class="mat-caption" style="position:relative;top:-8px">åpen</span>
+        <span class="mat-caption">åpen</span>
       </span>
 
       <button mat-icon-button (click)="deleteTimesheet()">
@@ -31,9 +31,9 @@
       </button> 
     </span>
 
-    <span *ngIf="timesheet.status === 2" class="color-success text-center">
+    <span *ngIf="timesheet.status === 2" class="color-success" fxLayout="column" fxLayoutAlign="start center">
       <mat-icon>lock</mat-icon>
-      <span class="mat-caption" style="position:relative;top:-8px">låst</span>
+      <span class="mat-caption">låst</span>
     </span>
 
   </span>
