--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <app-inner-nav title="Liste over ansatte" [buttons]="innerNavButtons">
-  <mat-spinner *ngIf="!users" class="center-spinner"></mat-spinner>
+  <mat-spinner *ngIf="!users" class="center-spinner" color="accent"></mat-spinner>
   <div *ngIf="users" class="p-0">
     <app-user-card *ngFor="let user of users"
       [user]="user"
