--- a/src/app/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/src/app/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -6,11 +6,11 @@
     </app-timesheet-filter-header>
 
     <mat-button-toggle-group aria-label="Grupper etter tidsperiode" class="mb-1"
-    [ngModel]="groupBy$ | async" (ngModelChange)="changeGroupingPeriod($event)">
-        <mat-button-toggle [value]="timePeriods.Day">Dag</mat-button-toggle>
-        <mat-button-toggle [value]="timePeriods.Week">Uke</mat-button-toggle>
-        <mat-button-toggle [value]="timePeriods.Month">Måned</mat-button-toggle>
-        <mat-button-toggle [value]="timePeriods.Year">År</mat-button-toggle>
+    [ngModel]="groupBy$ | async" (ngModelChange)="changeGroupingType($event)">
+        <mat-button-toggle [value]="groupByTypes.Day">Dag</mat-button-toggle>
+        <mat-button-toggle [value]="groupByTypes.Week">Uke</mat-button-toggle>
+        <mat-button-toggle [value]="groupByTypes.Month">Måned</mat-button-toggle>
+        <mat-button-toggle [value]="groupByTypes.Year">År</mat-button-toggle>
     </mat-button-toggle-group>
 
     <app-timesheet-statistic-table class="w-100 mat-elevation-z2"
