seperated time admin to module and added year&week list

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
 
   <span class="mat-body-2">Administrering</span>
   <app-list-card text="Administrer timer" startIcon="date_range" endIcon="chevron_right"
-  [routerLink]="['/timer/admin']">
+  [routerLink]="['/timeadministrering']">
 </app-list-card>
   <app-list-card text="Administrer data" startIcon="dns" endIcon="chevron_right"
     [routerLink]="['/data']">
