Fix timesheet adminlist and added change status ability

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <span>Oppdrag</span>
       </span>
     </mat-grid-tile>
-    <mat-grid-tile class="mat-elevation-z2 bg-foreground" matRipple [routerLink]="['/timer/ukeliste']">
+    <mat-grid-tile class="mat-elevation-z2 bg-foreground" matRipple [routerLink]="['/timer/ukevisning']">
       <span class="text-center">
         <mat-icon class="scale-150">timer</mat-icon><br />
         <span>Timer</span>
