--- a/src/app/shared/components/week-list-filter/week-list-filter.component.html
+++ b/src/app/shared/components/week-list-filter/week-list-filter.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" fxLayoutAlign="space-around stretch">
-  <span class="mat-body-2">Velg filtre for uker</span>
+  <span class="mat-body-2">Velg filtre</span>
 
   <ng-container *ngIf="userName">
     <mat-form-field style="max-width:400px;">
