--- a/src/app/shared/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/shared/components/timesheet-card/timesheet-card.component.html
@@ -20,21 +20,37 @@
 
     </span>
 
-    <span *ngIf="timesheet.status === 0" class="color-warn" fxLayout="column" fxLayoutAlign="space-between center">
+    <span *ngIf="timesheet.status === 0; else closedTimesheet" class="color-warn" fxLayout="column" fxLayoutAlign="space-between center">
       <span fxLayout="column" fxLayoutAlign="start center">
         <mat-icon>lock_open</mat-icon>
         <span class="mat-caption">åpen</span>
       </span>
 
-      <button mat-icon-button (click)="deleteTimesheet()">
-        <mat-icon>delete_forever</mat-icon>
+      <button *ngIf="adminView; else deleteButton" mat-icon-button (click)="changeStatus()">
+        <mat-icon>check_circle_outline</mat-icon>
       </button> 
+
+      <ng-template #deleteButton>
+        <button mat-icon-button (click)="deleteTimesheet()">
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </ng-template>
     </span>
 
-    <span *ngIf="timesheet.status === 2" class="color-success" fxLayout="column" fxLayoutAlign="start center">
-      <mat-icon>lock</mat-icon>
-      <span class="mat-caption">låst</span>
-    </span>
+    <ng-template #closedTimesheet>   
+      <span class="color-success" fxLayout="column" fxLayoutAlign="space-between center">
+        <span fxLayout="column" fxLayoutAlign="start center">
+          <mat-icon>lock</mat-icon>
+          <span class="mat-caption">låst</span>
+        </span>
+
+        <button *ngIf="adminView" mat-icon-button (click)="changeStatus()">
+          <mat-icon>check_circle</mat-icon>
+        </button> 
+      </span>
+
+    </ng-template>
+
 
   </span>
 
