small fixes and add config subject and timer for sync

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -25,12 +25,9 @@
     </button>
   </form>
 
-<div style="position:absolute;bottom:0;padding:16px;width:100%">
-  <app-add-to-home-screen ></app-add-to-home-screen>
-</div>
-
-
-
+  <div style="position:absolute;bottom:0;padding:16px;width:100%">
+    <button  mat-raised-button appAddToHomeScreen color="primary" class="w-100">Legg til app</button>
+  </div>
 
 </div>
 
