--- a/src/app/mission/mission-note-form/mission-note-form.component.html
+++ b/src/app/mission/mission-note-form/mission-note-form.component.html
@@ -1,5 +1,5 @@
 <app-mission-note-form-view
-    [note]="note"
+    [note]="note$ | async"
     [missionId]="missionId"
     (formSubmitted)="onSubmit($event)">
 </app-mission-note-form-view>
