--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -22,10 +22,9 @@
 
     <mat-tab label="Annet">
       <div class="p-2">
-        <mat-card class="app-card">
-          <mat-card-header>Annet</mat-card-header>
+        <mat-card class="app-card p-0">
           <mat-card-content>
-            <mat-nav-list>
+            <mat-nav-list class="p-0">
               <app-nav-list-item (click)="confirmPurge()"
                 [config]="{
                   mainLine: 'Slett lokal data',
@@ -35,6 +34,16 @@
                 }">
               </app-nav-list-item>
             </mat-nav-list>
+          </mat-card-content>
+        </mat-card>
+
+        <mat-card class="app-card mt-2">
+          <mat-card-header class="mb-2">Konfigurasjon</mat-card-header>
+          <mat-card-content>
+            <mat-form-field>
+              <input matInput placeholder="Synkroniseringstid i minutter"
+              [ngModel]="syncRefreshTime$ | async" (ngModelChange)="updateSyncRefreshTime($event)">
+            </mat-form-field>   
           </mat-card-content>
         </mat-card>
       </div>
