--- a/src/app/users/user-form/user-form-view/user-form-view.component.html
+++ b/src/app/users/user-form/user-form-view/user-form-view.component.html
@@ -1,5 +1,5 @@
 <mat-card class="app-card m-2">
-  <mat-card-header class="mb-2">Legg til bruker</mat-card-header>
+  <mat-card-header class="mb-2">{{ isCreateForm ? 'Legg til' : 'Rediger' }} bruker</mat-card-header>
   <mat-card-content>
     <form *ngIf="userForm" [formGroup]="userForm" fxLayout="column">
       <mat-form-field *ngIf="this.isCreateForm">
