--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -1,5 +1,5 @@
 <app-user-form-view
-  [user]="user"
+  [user]="user$ | async"
   [roles]="roles$ | async"
   (formSubmitted)="onSubmit($event)">
 </app-user-form-view>
