--- a/src/app/shared/layout/icon-button/icon-button.component.html
+++ b/src/app/shared/layout/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<button mat-icon-button
+<button mat-icon-button *ngIf="config"
     [attr.aria-label]="config.aria"
     [ngClass]="[
         config.colorClass ? config.colorClass : '', 
