--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,35 +1,38 @@
 
-<div class="auth-container">
-  <form [formGroup]="authForm" (ngSubmit)="submitForm()" class="auth-form">
-    <img src="assets/icons/icon-144x144.png" class="m-4" style="width:120px;height:120px" />
+  <mat-card class="app-card m-3" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px"
+    ngClass="ml-auto mr-auto" [ngClass.xs]="{'ml-auto':false, 'mr-auto':false}">
 
-    <fieldset>
-      <mat-form-field>
-        <mat-icon matSuffix color="primary">person</mat-icon>
-        <input matInput
-          formControlName="Username"
-          placeholder="Brukernavn"
-          type="text" />
-      </mat-form-field><br />
-      <mat-form-field>
-        <mat-icon matSuffix color="primary">vpn_key</mat-icon>
-        <input matInput
-          formControlName="Password"
-          placeholder="Passord"
-          type="password" />
-      </mat-form-field>
-    </fieldset>
-    <button mat-raised-button color="primary"[disabled]="!authForm.valid" type="submit">
-      <mat-icon>lock_open</mat-icon>
-      Logg inn
+    <img src="assets/icons/icon-144x144.png" style="width:120px;height:120px" />
+
+    <form [formGroup]="authForm" (ngSubmit)="submitForm()" class="text-center">
+      <span class="mat-subheading-2">Logg inn</span>
+      <fieldset>
+        <mat-form-field>
+          <mat-icon matSuffix color="primary">person</mat-icon>
+          <input matInput
+            formControlName="Username"
+            placeholder="Brukernavn"
+            type="text" />
+        </mat-form-field><br />
+        <mat-form-field>
+          <mat-icon matSuffix color="primary">vpn_key</mat-icon>
+          <input matInput
+            formControlName="Password"
+            placeholder="Passord"
+            type="password" />
+        </mat-form-field>
+      </fieldset>
+      <button mat-raised-button color="accent" [disabled]="!authForm.valid" type="submit">
+        <mat-icon>lock_open</mat-icon>
+        Logg inn
+      </button>
+    </form>
+  
+    <button mat-raised-button appAddToHomeScreen color="accent">
+      <mat-icon>get_app</mat-icon> Legg til app
     </button>
-  </form>
+  </mat-card>
 
-  <div style="position:absolute;bottom:0;padding:16px;width:100%">
-    <button  mat-raised-button appAddToHomeScreen color="primary" class="w-100">Legg til app</button>
-  </div>
-
-</div>
 
 
 
