--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -32,7 +32,7 @@
           <mat-card-header class="mb-2">Konfigurasjon</mat-card-header>
           <mat-card-content>
             <mat-form-field>
-              <input matInput placeholder="Synkroniseringstid i minutter"
+              <input matInput placeholder="Synkroniseringstid i minutter" type="tel"
               [ngModel]="syncRefreshTime$ | async" (ngModelChange)="updateSyncRefreshTime($event)">
             </mat-form-field>   
           </mat-card-content>
