--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import "~ag-grid-community/dist/styles/ag-theme-balham.css";
 @import "~ng-pick-datetime/assets/style/picker.min.css";
 
-html, body { height: 100%;}
+html, body { height: 100%; background:$background-color;color:black;}
 body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow:hidden;}
 
 .bg-primary{background:$primary!important;color:white;}
