--- a/src/app/shared/components/list-card/list-card.component.html
+++ b/src/app/shared/components/list-card/list-card.component.html
@@ -1,9 +1,11 @@
-<mat-card class="app-card mb-1" matRipple>
+<mat-card class="app-card mb-1" matRipple [matRippleDisabled]="navButton">
     <div mat-card-content fxLayout="row" fxLayoutAlign="space-between center" >
         <span class="ellipsis">
             <mat-icon class="mr-2">{{ startIcon }}</mat-icon>
             <span class="mat-h4">{{ text }}</span>
         </span>
-        <mat-icon>{{ endIcon }}</mat-icon>
+        
+        <app-icon-button *ngIf="navButton else endIconView" class="ml-auto" [config]="navButton"></app-icon-button>
+        <ng-template #endIconView><mat-icon>{{ endIcon }}</mat-icon></ng-template>
     </div>
 </mat-card>
