--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -1,158 +1,21 @@
 <mat-sidenav-container>
 
-  <mat-sidenav fixedInViewport #drawer class="mat-elevation-z4" 
-    [attr.role]="(isXs$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isXs$ | async) ? 'over' : 'side'"
-    [opened]="(isXs$ | async) === false">
-
-    <mat-toolbar fxLayout="column" fxLayoutAlign="center start" >
-
-      <span class="mat-small"
-        [ngClass]="(conSub$ | async) ? 'color-success' : 'color-warn'">
-        {{ (conSub$ | async) ? 'Tilkoblet internett' : 'Frakoblet internett' }}
-      </span>
-
-      <span class="mat-body"  *ngIf="currentUser$ | async; let user">{{ user.firstName }} {{ user.lastName }}</span>
-
-    </mat-toolbar>
-    
-    <mat-divider></mat-divider>
-
-    <mat-nav-list>
-      <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/hjem']" [routerLinkActive]="['active']">
-        <mat-icon mat-list-icon>home</mat-icon>
-        <p mat-line>Hjem</p>
-      </a>
-      <mat-divider class="mid-divider"></mat-divider>
-      <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/oppdrag']" [routerLinkActive]="['active']">
-        <mat-icon mat-list-icon>view_list</mat-icon>
-        <p mat-line>Oppdrag</p>
-      </a>
-
-      <mat-divider class="mid-divider"></mat-divider>
-
-      <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/timer/ukevisning']" [routerLinkActive]="['active']">
-        <mat-icon mat-list-icon>timer</mat-icon>
-        <p mat-line>Timeliste</p>
-      </a>
-
-      <mat-divider class="mid-divider"></mat-divider>
-<!-- 
-      <ng-container *ifRole="[Roles.Leder, Roles.Mellomleder]">
-        <div mat-subheader class="color-accent pb-0">Administrering</div>
-        <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/timestatistikk']" [routerLinkActive]="['active']">
-          <mat-icon mat-list-icon>assessment</mat-icon>
-          <p mat-line>Timestatistikk</p>
-        </a>
-        <mat-divider class="mid-divider"></mat-divider>
-        <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/data']" [routerLinkActive]="['active']">
-          <mat-icon mat-list-icon>dns</mat-icon>
-          <p mat-line>Data</p>
-        </a>
-        <mat-divider class="mid-divider"></mat-divider>
-        <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/brukere']" [routerLinkActive]="['active']">
-          <mat-icon mat-list-icon>people</mat-icon>
-          <p mat-line>Brukere</p>
-        </a>
-      </ng-container> -->
-
-      <mat-divider></mat-divider>
-
-      <span class="bottom-list">
-        <mat-divider></mat-divider>
-        <a mat-list-item (click)="toggleDrawer()" [routerLink]="['/profil']" [routerLinkActive]="['active']">
-          <mat-icon mat-list-icon>person</mat-icon>
-          <p mat-line>Profil</p>
-        </a>
-        <mat-divider class="mid-divider"></mat-divider>
-        <a mat-list-item (click)="handleLogout()">
-          <mat-icon mat-list-icon>power_settings_new</mat-icon>
-          <p mat-line>Logg ut</p>
-        </a>
-      </span>
-
-    </mat-nav-list>
-
+  <mat-sidenav fixedInViewport #drawer class="mat-elevation-z4 bg-primary" 
+    [attr.role]="isXs ? 'dialog' : 'navigation'"
+    [mode]="isXs ? 'over' : 'side'"
+    [opened]="!isXs">
+    <app-main-side-nav-content 
+      [user]="currentUser$ | async" 
+      (navItemClicked)="toggleDrawer()"
+      (hasLoggedOut)="handleLogout()">
+    </app-main-side-nav-content>
   </mat-sidenav>
+  
 
   <mat-sidenav-content *ngIf="config$ | async; let config" ngClass.xs="bottom-toolbar-padding">
 
-    <mat-toolbar class="mat-elevation-z4" 
-      [ngClass]="{'alt_nav': config.altNav, 'main_nav': !config.altNav, 'mat-elevation-z4': config.elevationEnabled}">
-
-      <mat-toolbar-row class="p-0">
-        <ng-container *ngIf="!config.altNav else altNav">
-
-          <ng-container *ngIf="config.menuBtnEnabled else backBtn">
-            <button
-              type="button"
-              aria-label="Toggle sidenav"
-              mat-icon-button
-              (click)="toggleDrawer()"
-              fxHide fxShow.xs>
-              <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-            </button>
-          </ng-container>
-
-          <ng-template #backBtn>
-            <button (click)="handleFn(config.backFn, config.backFnParams)"
-             mat-icon-button aria-label="Tilbake">
-                <mat-icon class="scale-150">chevron_left</mat-icon>
-            </button>
-          </ng-template>
-          <span class="mr-auto">
-            <span class="ml-1" [routerLink]="['/hjem']">{{ config.title }}</span>
-            <span class="ml-1 mat-caption" >{{ config.subTitle }}</span>
-          </span>
-        </ng-container>
-
-        <ng-template #altNav>
-          <span style="margin-right:auto;">
-
-            <button (click)="handleFn(config.backFn)"
-             mat-icon-button aria-label="Tilbake">
-                <mat-icon class="scale-150">chevron_left</mat-icon>
-            </button>
-
-            <ng-container *ngIf="config.subTitle || config.subIcon">
-              <mat-icon>{{ config.subIcon }}</mat-icon>
-              <small>{{ config.subTitle }}</small>
-            </ng-container>
-
-          </span>
-        </ng-template>
-
-        <mat-spinner *ngIf="loading$ |  async" diameter="24" color="accent"></mat-spinner>
-
-
-        <button mat-icon-button 
-          *ngFor="let button of config.buttons" attr.aria-label="{{ button.aria || 'Knapp' }}" 
-          [ngClass]="button.colorClass || 'color-foreground'"
-          (click)="handleFn(button.callback)">
-            <mat-icon>{{ button.icon }}</mat-icon>
-        </button>
-
-        <ng-container *ngIf="config.searchFn">
-          <button (click)="toggleSearchBar()" mat-icon-button aria-label="Avbryt søk">
-            <mat-icon>search</mat-icon>
-          </button>
-
-          <app-search-bar [isHidden]="searchBarHidden" (hide)="toggleSearchBar()" (search)="handleFn(config.searchFn, [$event])"></app-search-bar>
-        </ng-container>
-
-        <button mat-icon-button *ngIf="config.bottomSheetButtons?.length" (click)="openBottomSheet(config.bottomSheetButtons)">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-
-      </mat-toolbar-row>
-
-      <mat-toolbar-row *ngIf="config.altNav"  class="alt_nav_row">
-        <mat-icon *ngIf="config.icon">{{ config.icon }}</mat-icon>  &nbsp;
-        <span [innerHTML]="config.title"></span>
-      </mat-toolbar-row>
-
-    </mat-toolbar>
-
+    <app-main-top-nav [config]="config" (menuBtnClicked)="toggleDrawer()"></app-main-top-nav>
+    
     <div class="main_content"
       [ngClass]="config.altNav ? 'main_content_height_alt' : 'main_content_height_main'">
       <router-outlet></router-outlet>
@@ -162,4 +25,4 @@
 
 </mat-sidenav-container>
 
-<app-bottom-nav fxHide fxShow.xs [openTimesheetCount]="openTimesheetCount$ | async"></app-bottom-nav>
+<app-main-bottom-nav fxHide fxShow.xs [openTimesheetCount]="openTimesheetCount$ | async"></app-main-bottom-nav>
