--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -22,10 +22,9 @@
 
     <mat-tab label="Annet">
       <div class="p-2">
-        <app-list-card appAddToHomeScreen text="Legg til app" startIcon="get_app" endIcon="chevron_right"></app-list-card>
+        <app-list-card appAddToHomeScreen text="Legg til app" startIcon="get_app"></app-list-card>
 
-        <app-list-card text="Slett lokal data" startIcon="delete_sweep"
-          [navButton]="{callback: confirmPurge, icon: 'chevron_right', iconSizeClass: 'scale-125'}">
+        <app-list-card text="Slett lokal data" startIcon="delete_sweep" (click)="confirmPurge()">
         </app-list-card>
 
         <mat-card class="app-card mt-1">
